crates/tracing/tests/ui/instrument/dotted_field_not_in_allowlist.stderr
error: `foo.bar.baz` is not in the OpenTelemetry allowlist
 --> tests/ui/instrument/dotted_field_not_in_allowlist.rs:3:19
  |
3 | #[instrument(rpc: foo.bar.baz = %bar)]
  |                   ^^^
