crates/tracing/tests/ui/instrument/dotted_field_not_in_allowlist.rs
use miden_node_tracing::instrument;

#[instrument(rpc: foo.bar.baz = %bar)]
fn foo() {}

fn main() {}
